# vec-base

./: .gitignore  Cargo.toml  README.md
src/: benchmark.sh  faiss_run.py  main.rs  search.rs
