[package]
name = "vec-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"      # using an old version
dashmap = "5.5.0"
itertools = "0.11.0"
json = "0.12.4"
rand = "0.8.5"
rayon = "1.7.0"
